definitely stopped the auto focus on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,7 @@ body {
     background-image: url("../images/background-image.png");
 }
 
-input[type="text"],
-select:focus,
-textarea {
+.form-control {
   font-size: 16px;
 }
 
